language/move-lang/tests/move_check/typing/return_type_explicit_exp_invalid.exp
error: 

   ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:5:9 ───
   │
 5 │         return ()
   │         ^^^^^^^^^ Invalid return
   ·
 5 │         return ()
   │                -- The type: '()'
   ·
 4 │     fun t0(): u64 {
   │               --- Is not compatible with: 'u64'
   │

error: 

   ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:9:19 ───
   │
 9 │         if (true) return 1 else return 0
   │                   ^^^^^^^^ Invalid return
   ·
 9 │         if (true) return 1 else return 0
   │                          - The type: integer
   ·
 8 │     fun t1(): () {
   │               -- Is not compatible with: '()'
   │

error: 

   ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:9:33 ───
   │
 9 │         if (true) return 1 else return 0
   │                                 ^^^^^^^^ Invalid return
   ·
 9 │         if (true) return 1 else return 0
   │                                        - The type: integer
   ·
 8 │     fun t1(): () {
   │               -- Is not compatible with: '()'
   │

error: 

    ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:13:14 ───
    │
 13 │         loop return (0, false, R{});
    │              ^^^^^^^^^^^^^^^^^^^^^^ Invalid return
    ·
 13 │         loop return (0, false, R{});
    │                     --------------- The type: '({integer}, bool, 0x8675309::M::R)'
    ·
 12 │     fun t2(): (u64, bool) {
    │               ----------- Is not compatible with: '(u64, bool)'
    │

error: 

    ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:18:22 ───
    │
 18 │         while (true) return (0, false, R{});
    │                      ^^^^^^^^^^^^^^^^^^^^^^ Invalid return
    ·
 18 │         while (true) return (0, false, R{});
    │                             --------------- The type: '({integer}, bool, 0x8675309::M::R)'
    ·
 17 │     fun t3(): (u64, bool, R, bool) {
    │               -------------------- Is not compatible with: '(u64, bool, 0x8675309::M::R, bool)'
    │

error: 

    ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:23:23 ───
    │
 23 │         while (false) return (0, false, R{});
    │                       ^^^^^^^^^^^^^^^^^^^^^^ Invalid return
    ·
 23 │         while (false) return (0, false, R{});
    │                               - The type: integer
    ·
 22 │     fun t4(): (bool, u64, R) {
    │                ---- Is not compatible with: 'bool'
    │

